# fastapi-deployment-benchmark

./: .gitignore  20240806_0.md  20240806_1.md  20240806_2.md  20240806_20.md  20240806_21.md  20240806_22.md  20240806_23.md  20240806_24.md  20240806_3.md  20240806_4.md  20240806_5.md  README.md  pyproject.toml  summary.md
benchmark/: main.py
benchmark/dependencies/: db.py
prisma/: schema.prisma
results/: 20240805_1_async.md  20240805_2_sync.md  20240805_3_async.md  20240805_4_sync.md  20240805_5_async.md  20240805_6_sync.md  20240805_7_async.md
scripts/: dev.py  start.py  start_gunicorn.py  start_uvicorn.py
