[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["vikyw89 <vikyw89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
uvicorn = {extras = ["standard"], version = "^0.30.5"}
gunicorn = "^22.0.0"


ruff = "^0.5.6"
sqlalchemy = "^2.0.32"
aiomysql = "^0.2.0"
python-dotenv = "^1.0.1"
cryptography = "^43.0.0"
prisma = "^0.14.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start_gunicorn = "scripts.start_gunicorn:run"
start_uvicorn = "scripts.start_uvicorn:run"
dev = "scripts.dev:run"